[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.109.0",
    "langchain",
    "langchain-openai",
    "langchainhub",
    "neo4j==5.14.1",
    "numpy==1.26.2",
    "openai",
    "opentelemetry-api==1.22.0",
    "pydantic==2.5.1",
    "uvicorn==0.25.0",
    "langchain-community"
]

[project.optional-dependencies]
dev = ["black", "flake8"]